# pylibjpeg-openjpeg

./: .codecov.yml  .gitignore  .gitmodules  LICENSE  MANIFEST.in  README.md  build.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: pytest-builds.yml  release-wheels.yml  test-release.yml  wheel-builds.yml
build_tools/cmake/: CMakeLists.txt
docs/changes/: v1.1.0.rst  v1.1.1.rst  v1.2.0.rst  v1.3.0.rst  v1.3.1.rst  v1.3.2.rst  v2.0.0.rst  v2.1.0.rst  v2.2.0.rst  v2.3.0.rst  v2.4.0.rst  v2.5.0.rst
lib/interface/: color.c  decode.c  encode.c  opj_config.h  utils.c  utils.h
lib/openjpeg/src/lib/openjp2/: openjpeg.c
openjpeg/: __init__.py  _config.py  _openjpeg.c  _openjpeg.pyx  _version.py  utils.py
openjpeg/src/interface/: Jpeg2K.h  Jpeg2KDecode.c  color.h  decode.c  opj_config.h  opj_config_private.h  utils.c  utils.h
openjpeg/tests/: README.md  README.rst  __init__.py  pydicom_handler.py  test_decode.py  test_encode.py  test_handler.py  test_misc.py  test_openjpeg.py  test_parameters.py
pyjpeg/: __init__.py  jpegio.py  pyjpeg.py  pylibjpeg_handler.py
pyjpeg/src/pyjpeg/: Jpeg2K.h
