[build-system]
requires = [
    "poetry-core >=1.8,<2",
    "numpy >= 1.24",
    "cython >= 3.0",
    "setuptools",
]
build-backend = "poetry.core.masonry.api"

[tool.poetry.build]
script = "build.py"
generate-setup-file = true

[tool.poetry]
authors = ["pylibjpeg-openjpeg contributors"]
classifiers=[
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Developers",
    "Intended Audience :: Healthcare Industry",
    "Intended Audience :: Science/Research",
    "Development Status :: 5 - Production/Stable",
    "Natural Language :: English",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "Topic :: Software Development :: Libraries",
]
description = """\
A Python wrapper for openjpeg, with a focus on use as a plugin for \
for pylibjpeg\
"""
homepage = "https://github.com/pydicom/pylibjpeg-openjpeg"
keywords = ["dicom pydicom python imaging jpg jpeg jpeg2k jpeg2000 pylibjpeg openjpeg"]
license = "MIT"
maintainers = ["scaramallion <scaramallion@users.noreply.github.com>"]
name = "pylibjpeg-openjpeg"
# We want to be able to build from sdist, so include required openjpeg src
#   But don't include any openjpeg src in the built wheels
include = [
    { path = "lib", format="sdist" },
    { path = "build_tools", format="sdist" },
]
packages = [
    {include = "openjpeg" },
]
readme = "README.md"
version = "2.4.0"


[tool.poetry.dependencies]
python = "^3.9"
numpy = "^2.0"

[tool.poetry.plugins."pylibjpeg.jpeg_2000_decoders"]
openjpeg = "openjpeg:decode"

[tool.poetry.plugins."pylibjpeg.pixel_data_decoders"]
"1.2.840.10008.1.2.4.90" = "openjpeg:decode_pixel_data"
"1.2.840.10008.1.2.4.91" = "openjpeg:decode_pixel_data"
"1.2.840.10008.1.2.4.201" = "openjpeg:decode_pixel_data"
"1.2.840.10008.1.2.4.202" = "openjpeg:decode_pixel_data"
"1.2.840.10008.1.2.4.203" = "openjpeg:decode_pixel_data"

[tool.poetry.plugins."pylibjpeg.pixel_data_encoders"]
"1.2.840.10008.1.2.4.90" = "openjpeg:encode_pixel_data"
"1.2.840.10008.1.2.4.91" = "openjpeg:encode_pixel_data"

[tool.coverage.run]
omit = [
    "openjpeg/tests/*",
]

[tool.mypy]
python_version = "3.9"
files = "openjpeg"
exclude = ["openjpeg/tests"]
show_error_codes = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
warn_unreachable = false
ignore_missing_imports = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
